--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-server.port=8080
+logging.level.org.zalando.logbook=TRACE
+logging.level.ru.yandex.practicum.contollers=trace
+logging.level.ru.yandex.practicum.*=trace
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
